<resources>
    <string name="app_name">Competency</string>

    <string name="record_save_successfully">Record Save Successfully</string>
    <string name="serviceFailureError">Something went wrong</string>
    <string name="add_employee">Add Employee</string>
    <string name="competency_title">COMPETENCY</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="input_required">Input required</string>
    <string name="competency">Competency :</string>
    <string name="project">Project : </string>
    <string name="action_add">Add</string>
    <string name="action_addproject">Add Project</string>

    <string name="name">Enter Name</string>
    <string name="band">Enter Band</string>
    <string name="designation">Enter Designation</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="ux">UX</string>
    <string name="tester">Tester</string>
    <string name="id">ID</string>
    <string name="edit">Edit</string>
    <string name="please_select_competency">Please select competency</string>
    <string name="please_select_project">Please select project</string>
    <string name="employee_id">Employee ID</string>
    <string name="select_project">Select project</string>
    <string name="enter_project">Enter Project</string>
    <string name="add_project">Add Project</string>
    <string name="queryhint">Search Here</string>
    <string name="loading_message">Please wait! This may take a moment.</string>

</resources>
